--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "react-native-heroicons": "^2.2.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-svg": "^12.4.4",
+    "react-native-svg": "12.3.0",
     "react-native-web": "^0.17.7",
     "tailwindcss-react-native": "^1.7.10",
-    "expo-splash-screen": "~0.15.1"
+    "expo-splash-screen": "~0.15.1",
+    "expo-updates": "~0.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
